<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_gravity="center"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/app_icon"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:textSize="44sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_back"
        android:letterSpacing="0.04"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:textSize="24sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/phone_number"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/loginPhoneNumberEditText"
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="phone"
            android:autofillHints="phoneNumber"/>
        <TextView
            android:textSize="24sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/password"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/loginPasswordEditText"
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textPassword"
            android:autofillHints="password"/>
        <Button
            android:textSize="24sp"
            android:layout_gravity="center"
            android:id="@+id/loginLoginButton"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:paddingStart="65sp"
            android:paddingEnd="65sp"
            android:backgroundTint="@color/black"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/do_not_have_an_account_yet"/>
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/loginRegisterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0sp"
            android:text="@string/register_now"/>
    </LinearLayout>
</LinearLayout>
