<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <ImageView
            android:id="@+id/quizBackImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/quizQuestionNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:text="@string/choose_the_correct_answer"/>
    <ImageView
        android:layout_gravity="center"
        android:id="@+id/quizCarImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/car_1"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <Button
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/quizOption1Button"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/option_1"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/black"/>
        <Button
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/quizOption2Button"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/option_2"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <Button
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/quizOption3Button"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/option_3"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/black"/>
        <Button
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/quizOption4Button"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/option_4"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/black"/>
    </LinearLayout>
    <Button
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:id="@+id/quizNextButton"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/black"/>
</LinearLayout>
