<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_celebration_24"/>
        <TextView
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/baseline_diamond_24"/>
        <TextView
            android:textSize="42sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/finishScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/baseline_hotel_class_24"/>
        <TextView
            android:textSize="42sp"
            android:textColor="@color/darkGrey"
            android:layout_gravity="center"
            android:id="@+id/finishBestScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <Button
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:id="@+id/finishLeaderboardButton"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/leaderboard"
        android:backgroundTint="@color/black"/>
    <ImageView
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:id="@+id/finishBackHomeButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/baseline_home_24"
        android:contentDescription="@string/back_to_home"
        android:backgroundTint="@color/black"/>
</LinearLayout>
