<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/homeScoreImageView"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/baseline_diamond_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/homeScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/homeScoreImageView"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/homeFriendsImageView"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/baseline_group_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_gravity="center"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/app_icon"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:textSize="36dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/train_your_memory_everyday"/>
    <Button
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:id="@+id/homeButtonPlayQuiz"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:text="@string/play_quiz"
        android:backgroundTint="@color/black"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:weightSum="3">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/homePreviousDayImageView"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:src="@drawable/baseline_keyboard_double_arrow_left_24"
            android:layout_weight="1"/>
        <TextView
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/homeDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_weight="1"
            android:textAlignment="center"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/homeNextDayImageView"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:src="@drawable/baseline_keyboard_double_arrow_right_24"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:id="@+id/homeButtonSignOut"
        android:padding="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/sign_out"
        android:backgroundTint="@color/white"/>
</LinearLayout>
